# calorie-tracker-mcp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.claude/skills/tablycja/: SKILL.md
auth_server/: __init__.py  __main__.py  app.py  config.py  crypto.py  google.py  templates.py  tokens.py
docs/: api-map.md
mcp_server/: __init__.py  __main__.py  auth_middleware.py  context.py  server.py
mcp_server/tools/: activity.py  catalog.py  diary.py  profile.py  recipes.py  semantic.py  weight.py
recon/: README.md  web_capture.py
scripts/: bucket_ingest.py  bucket_ingest_notify.sh  build_index.py  ingest_with_notify.sh  quality_check_e5.py  recreate_collection.py  test_active_user.sh
tablycja_client/: __init__.py  activity.py  cache.py  catalog.py  client.py  diary.py  embeddings.py  errors.py  favorites.py  meals.py  models.py  profile.py  session.py  stats.py  templates.py  weight.py
tests/: conftest.py  test_activity.py  test_auth_middleware.py  test_auth_server.py  test_catalog.py  test_diary.py  test_diary_entry_edit.py  test_mcp_tools.py  test_meals.py  test_password_bind.py  test_profile.py  test_session.py  test_weight.py
