[project]
name = "calorie-integration"
version = "0.0.1"
description = "MCP server bridging tablycjakalorijnosti.com.ua to LLM clients"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "authlib>=1.3",
    "cryptography>=43",
    "python-dotenv>=1.0",
    "qdrant-client>=1.12",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]

[dependency-groups]
recon = [
    "playwright>=1.47",
    "mitmproxy>=11",
]
ingest = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "vcrpy>=6",
    "ruff>=0.6",
    "basedpyright>=1.13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.basedpyright]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
